fix code in hover window unreadable

--- a/Assets/css/nebula.css
+++ b/Assets/css/nebula.css
@@ -2391,7 +2391,7 @@ span.task-date-overdue {
 	margin-bottom:10px
 }
 .markdown pre {
-	background:#ced4da;
+	background:#242729;
 	padding:10px;
 	border-radius:5px;
 	border:0px solid #ddd;
